--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
     <br/>
     <small>
         <a href="https://macosnotif.js.org/">
-            <img src="https://img.shields.io/badge/package-v0.1.0--beta2-007aff.svg?style=flat-square"
+            <img src="https://img.shields.io/badge/package-v0.1.0-007aff.svg?style=flat-square"
                  alt="Package Version">
         </a>
         <a href="https://github.com/MattIPv4/macOSNotifJS/tree/master/LICENSE">
@@ -632,7 +632,7 @@ options = {
     <small>
         macOSNotifJS is a plugin created by <a href="https://mattcowley.co.uk/" target="_blank">Matt Cowley</a>.
         <br/>
-        <br/><i>macOSNotifJS - v0.1.0-beta2 - 2019-06-08</i>
+        <br/><i>macOSNotifJS - v0.1.0 - 2019-06-08</i>
     </small>
 </h2>
 
