Add jsdoc to the main class, adding new getters & setters

--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@ options = {
 <h4><a id="theming-support" data-section-link></a> Theming Support:</h4>
 
 <button data-demo-load
-        onclick="macOSNotif({title:'Dark mode notification', subtitle:'Emulates the macOS dark mode styling', theme:macOSNotifThemes.Dark, mainLink:'#', btn1Text:'Dark', btn1Dismiss:false, btn1Link:function(n){n.applyTheme(macOSNotifThemes.Dark);}, btn2Text:'Light', btn2Dismiss:false, btn2Link:function(n){n.applyTheme(macOSNotifThemes.Light);}})">
+        onclick="macOSNotif({title:'Dark mode notification', subtitle:'Emulates the macOS dark mode styling', theme:macOSNotifThemes.Dark, mainLink:'#', btn1Text:'Dark', btn1Dismiss:false, btn1Link:function(n){n.theme = macOSNotifThemes.Dark;}, btn2Text:'Light', btn2Dismiss:false, btn2Link:function(n){n.theme = macOSNotifThemes.Light;}})">
     Dark mode notification
 </button>
 <br/>
@@ -553,10 +553,10 @@ options = {
     mainLink:'#',
     btn1Text:'Dark',
     btn1Dismiss:false,
-    btn1Link:function(n){n.applyTheme(macOSNotifThemes.Dark);},
+    btn1Link:function(n){n.theme = macOSNotifThemes.Dark;},
     btn2Text:'Light',
     btn2Dismiss:false,
-    btn2Link:function(n){n.applyTheme(macOSNotifThemes.Light);}
+    btn2Link:function(n){n.theme = macOSNotifThemes.Light;}
 })</pre>
 
 <br/>
@@ -636,7 +636,7 @@ options = {
     <small>
         macOSNotifJS is a plugin created by <a href="https://mattcowley.co.uk/" target="_blank">Matt Cowley</a>.
         <br/>
-        <br/><i>macOSNotifJS - v0.1.0 - 2019-06-08</i>
+        <br/><i>macOSNotifJS - v0.1.0 - 2019-06-09</i>
     </small>
 </h2>
 
