Build jsdoc website docs

--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@ options = {
     <small>
         macOSNotifJS is a plugin created by <a href="https://mattcowley.co.uk/" target="_blank">Matt Cowley</a>.
         <br/>
-        <br/><i>macOSNotifJS - v0.1.0 - 2019-06-09</i>
+        <br/><i>macOSNotifJS - v0.1.1-beta1 - 2019-06-09</i>
     </small>
 </h2>
 
