--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <meta charset="UTF-8"/>
 
-<title>macOSNotifJS - v0.1.1-beta1</title>
+<title>macOSNotifJS - v0.1.1</title>
 
 <meta name="title"
-      content="macOSNotifJS - v0.1.1-beta1"/>
+      content="macOSNotifJS - v0.1.1"/>
 
 <meta name="description"
-      content="macOSNotifJS - v0.1.1-beta1 - A simple Javascript plugin to create simulated macOS notifications on your website."/>
+      content="macOSNotifJS - v0.1.1 - A simple Javascript plugin to create simulated macOS notifications on your website."/>
 
 <meta name="keywords"
       content="javascript, javascript-plugin, notifications, notification, macos, javascript-tools, javascript-utility, javascript-audio, notification-system, simulated-macos-notifications, macosx, osx, osx-notifications, javascript-library, javascript-framework, notification-service, notification-api"/>
@@ -35,10 +35,10 @@
       content="@MattIPv4"/>
 
 <meta name="twitter:title"
-      content="macOSNotifJS - v0.1.1-beta1"/>
+      content="macOSNotifJS - v0.1.1"/>
 
 <meta name="twitter:description"
-      content="macOSNotifJS - v0.1.1-beta1 - A simple Javascript plugin to create simulated macOS notifications on your website."/>
+      content="macOSNotifJS - v0.1.1 - A simple Javascript plugin to create simulated macOS notifications on your website."/>
 
 <meta name="twitter:image"
       content="https://macosnotif.js.org/brand/macOSNotifJS-818x162.png"/>
@@ -47,7 +47,7 @@
       content="https://macosnotif.js.org/"/>
 
 <meta prefix="og: http://ogp.me/ns#" property="og:title"
-      content="macOSNotifJS - v0.1.1-beta1"/>
+      content="macOSNotifJS - v0.1.1"/>
 
 <meta prefix="og: http://ogp.me/ns#" property="og:type"
       content="website"/>
@@ -59,7 +59,7 @@
       content="macOSNotifJS"/>
 
 <meta prefix="og: http://ogp.me/ns#" property="og:description"
-      content="macOSNotifJS - v0.1.1-beta1 - A simple Javascript plugin to create simulated macOS notifications on your website."/>
+      content="macOSNotifJS - v0.1.1 - A simple Javascript plugin to create simulated macOS notifications on your website."/>
 
 <meta prefix="og: http://ogp.me/ns#" property="og:url"
       content="https://macosnotif.js.org/"/>
@@ -264,7 +264,7 @@
 </a>
 
 <h1 class="title">
-    <a data-section-link id="macosnotifjs"></a> macOSNotifJS <small>(v0.1.1-beta1)</small>
+    <a data-section-link id="macosnotifjs"></a> macOSNotifJS <small>(v0.1.1)</small>
     <br/>
     <small>
         A simple Javascript plugin to create simulated macOS notifications on your website.
@@ -304,10 +304,10 @@
 
 <blockquote class="info">
     <h2 class="title">
-        <a href="/docs/macosnotif/0.1.1-beta1/">Redirecting to the latest docs...</a>
+        <a href="/docs/macosnotif/0.1.1/">Redirecting to the latest docs...</a>
     </h2>
 </blockquote>
 <script>
-    window.location.replace("/docs/macosnotif/0.1.1-beta1/");
+    window.location.replace("/docs/macosnotif/0.1.1/");
 </script>
 </body>
